# jps-api-wrapper

./: .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: requirements.txt
docs/source/: JPS API Wrapper.rst  conf.py  index.rst
src/: __init__.py  classic.py  jamf_auth.py  pro.py  request_builder.py  utils.py
src/jps_api_wrapper/: classic.py  pro.py  request_builder.py  test.py  utils.py
src/tests/: test_classic.py
tests/: test_classic.py  test_jamf_auth.py  test_pro.py
