[metadata]
name = jps_api_wrapper
version = 0.31.0
description = Jamf Pro Server api wrapper split into Classic and Pro
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.9
install_requires =
    requests
package_dir=
    =src
packages = find:

[options.packages.find]
where = src