[metadata]
name = jps_api_wrapper
version = 0.164.4
description = Jamf Pro Server API wrapper split into Classic and Pro
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
readme = README.md
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.9
install_requires =
    requests
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

[project.urls]
"Homepage" = "https://github.com/bweber226/jps-api-wrapper"
"Documentation" = "https://jps-api-wrapper.readthedocs.io/en/latest/index.html"