[metadata]
name = jps_api_wrapper
version = 1.16.0
description = Jamf Pro Server API Python wrapper
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
readme = README.md
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.6
install_requires =
    jamf-api-auth
    requests
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

[project.urls]
"Homepage" = "https://github.com/bweber226/jps-api-wrapper"
"Documentation" = "https://jps-api-wrapper.readthedocs.io/en/latest/index.html"